[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/MenuScene.gd" type="Script" id=1]
[ext_resource path="res://imageHere.png" type="Texture" id=2]

[sub_resource type="Theme" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -123.0
margin_right = 69.0
margin_bottom = -50.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 69.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 69.0
margin_bottom = 44.0
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="MenuImage" type="TextureRect" parent="."]
margin_left = 88.0
margin_top = 44.0
margin_right = 706.0
margin_bottom = 544.0
rect_scale = Vector2( 0.346, 0.238 )
texture = ExtResource( 2 )
stretch_mode = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
